# model-fingerprint

./: .gitignore  AGENT.md  README.md  README.zh-CN.md  mypy.ini  pyproject.toml  ruff.toml
calibration/: fingerprint-suite-v2.json  fingerprint-suite-v3.json  fingerprint-suite-v32.json  fingerprint-suite-v32.manifest.json
endpoint-profiles/: deepseek-chat.yaml  deepseek-openai-chat.yaml  moonshot-kimi-k2-5.yaml  moonshot-kimi-k2-thinking.yaml  moonshot-kimi-k2.5.yaml  openrouter-claude-haiku-4.5.yaml  openrouter-claude-opus-4-6.yaml  openrouter-claude-opus-4.1.yaml  openrouter-claude-opus-4.6.yaml  openrouter-claude-sonnet-4-6.yaml  openrouter-claude-sonnet-4.6.yaml  openrouter-deepseek-chat.yaml  openrouter-gemini-2.5-flash-lite.yaml  openrouter-gemini-3-flash-preview.yaml  openrouter-gemini-3-pro-preview.yaml  openrouter-gemini-3.1-pro-preview.yaml  openrouter-glm-4.7.yaml  openrouter-glm-5.yaml  openrouter-gpt-5.3-chat.yaml  openrouter-gpt-5.3-codex.yaml  openrouter-gpt-5.4.yaml  openrouter-kimi-k2-5.yaml  openrouter-kimi-k2-thinking.yaml  openrouter-kimi-k2.5.yaml  openrouter-minimax-m2.5.yaml  openrouter-nano-banana-pro.yaml  openrouter-nano-banana.yaml
extractors/: abstention_score_v1.yaml  abstention_score_v3.yaml  abstention_v1.yaml  abstention_v3.yaml  boundary_decision_score_v1.yaml  boundary_decision_v1.yaml  completion_metadata_v1.yaml  context_retrieval_score_v1.yaml  context_retrieval_score_v3.yaml  context_retrieval_v1.yaml  context_retrieval_v3.yaml  evidence_grounding_score_v1.yaml  evidence_grounding_score_v3.yaml  evidence_grounding_v1.yaml  (+20 more)
(+407 files in other folders)
